Resolved overlapping header and moved inline body css to separate file.

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .header {
   padding: 1em 3em;
-
+  position: absolute;
   border-bottom: 2px solid #d6dce0;
   background: #f5f7f9;
   color: #9eafba;
   p {
     display: inline;
   }
+}
+
+.body {
+  margin: 80px;
 }
